putting structure together

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
    </head>
    <body>
 
-      <script src="js/three.min.js"></script>
+      <script src="js/three.js"></script>
       <script src="js/orbitControls.js"></script>
-      <script type="text/javascript" src="./js/STLLoader.js"></script>
+      <script src="js/threex.windowresize.js"></script>
+      <script src="js/threex.daynight.js"></script>
+      <script src="js/threex.linkify.js"></script>
+      <script src="js/threex.domevents.js"></script>
+
       <script type="text/javascript" src="./js/helpers.js"></script>
       <script type="text/javascript" src="./js/application.js"></script>
 
