--- a/index.html
+++ b/index.html
@@ -1,19 +1,45 @@
-<html>
+<html lang="en">
    <head>
-      <title>Dreamcacher Interface</title>
-      <style>canvas { width: 100%; height: 100% }</style>
+      <title>three.js webgl - interactive cubes (gpu)</title>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+      <style>
+         body {
+            font-family: Monospace;
+            background-color: #f0f0f0;
+            margin: 0px;
+            overflow: hidden;
+         }
+
+         .info {
+            position: absolute;
+            background-color: black;
+            opacity: 0.8;
+            color: white;
+            text-align: center;
+            top: 0px;
+            width: 100%;
+         }
+
+         .info a {
+            color: #00ffff;
+         }
+      </style>
    </head>
    <body>
 
-      <script src="js/three.js"></script>
-      <script src="js/orbitControls.js"></script>
-      <script src="js/threex.windowresize.js"></script>
-      <script src="js/threex.daynight.js"></script>
-      <script src="js/threex.linkify.js"></script>
-      <script src="js/threex.domevents.js"></script>
+      <div class="info">
+         <a href="http://threejs.org" target="_blank">three.js</a> webgl - gpu picking
+      </div>
 
-      <script type="text/javascript" src="./js/helpers.js"></script>
-      <script type="text/javascript" src="./js/application.js"></script>
+      <div id="container"></div>
 
+      <script src="./js/three.min.js"></script>
+
+      <script src="./js/TrackballControls.js"></script>
+
+      <script src="./js/stats.min.js"></script>
+
+      <script src="./js/application.js"></script>
    </body>
 </html>
