--- a/index.html
+++ b/index.html
@@ -34,7 +34,19 @@
 
       <div id="container"></div>
 
+
+      <script src="./js/helpers.js"></script>
+
+      <script src="./js/dreamData.js"></script>
+
+
       <script src="./js/three.min.js"></script>
+
+      <script src="./js/threex.daynight.js"></script>
+
+      <script src="./js/threex.MontainsArena.js"></script>
+
+      <script src="./js/geometryChooser.js"></script>
 
       <script src="./js/TrackballControls.js"></script>
 
