--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 
       <script src="./js/dreamData.js"></script>
 
-
       <script src="./js/three.min.js"></script>
 
-      <script src="./js/threex.daynight.js"></script>
+      <script src="./js/threex.noiseshadermaterial.js"></script>
 
-      <script src="./js/threex.MontainsArena.js"></script>
+      <script src="./js/threex.daynight.js"></script>
 
       <script src="./js/geometryChooser.js"></script>
 
       <script src="./js/TrackballControls.js"></script>
 
-      <script src="./js/stats.min.js"></script>
+      <script src="./js/starfields.js"></script>
 
       <script src="./js/application.js"></script>
+
    </body>
 </html>
