--- a/index.html
+++ b/index.html
@@ -1,35 +1,15 @@
 <html lang="en">
    <head>
-      <title>three.js webgl - interactive cubes (gpu)</title>
+      <title>dREAM-cACHER</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-      <style>
-         body {
-            font-family: Monospace;
-            background-color: #f0f0f0;
-            margin: 0px;
-            overflow: hidden;
-         }
 
-         .info {
-            position: absolute;
-            background-color: black;
-            opacity: 0.8;
-            color: white;
-            text-align: center;
-            top: 0px;
-            width: 100%;
-         }
-
-         .info a {
-            color: #00ffff;
-         }
-      </style>
+      <link href="./stylesheets/index.css" rel="stylesheet" />
    </head>
    <body>
 
       <div class="info">
-         <a href="http://threejs.org" target="_blank">three.js</a> webgl - gpu picking
+         <a href="http://github.io" target="_blank">enspiral-cherubi</a>dREAM-cACHER
       </div>
 
       <div id="container"></div>
