object clicking is working

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
       <script src="./js/three.min.js"></script>
 
+      <script src='./js/threex.domevents.js'></script>
+
       <script src="./js/threex.noiseshadermaterial.js"></script>
 
       <script src="./js/threex.daynight.js"></script>
