--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
-      <!-- Latest compiled and minified CSS -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
-      <!-- Optional theme -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-
+      <link href="./stylesheets/vendor/bootstrap.min.css" rel="stylesheet" />
 
       <link href="./stylesheets/index.css" rel="stylesheet" />
    </head>
@@ -46,6 +41,7 @@
         <li class="active" id='dreamscape-tab'><a href="#">Dreamscape</a></li>
         <li id='my-dreams-tab'><a href="#">My Dreams</a></li>
         <li id='log-out-tab'><a href="#">Logout</a></li>
+        <li id='new-dream-tab'><a href="#">Cache New Dream</a></li>
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -154,12 +150,11 @@
 
       <!-- this should come AFTER the preceeding files -->
       <script src='/js/vendor/devise_token_auth/j-toker.js'></script>
-
       <!-- jToker will now be available at $.auth -->
 
 
-      <!-- Latest compiled and minified JavaScript -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+      <script src="./js/vendor/bootstrap/bootstrap.min.js"></script>
 
       <script src="./js/mvc/controller.js"></script>
 
