--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
       <ul class="nav navbar-nav">
         <li class="active" id='dreamscape-tab'><a href="#">Dreamscape</a></li>
         <li id='my-dreams-tab'><a href="#">My Dreams</a></li>
-        <li id='log-out-tab'><a href="#">Logout</a></li>
         <li id='new-dream-tab'><a href="#">Cache New Dream</a></li>
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
@@ -62,44 +61,89 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form> -->
       <ul class="nav navbar-nav navbar-right">
+        <li id='log-out-tab'><a href="#">Logout</a></li>
         <li class="dropdown" id='login-dropdown'>
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
-      <ul id="login-dp" class="dropdown-menu">
-        <li>
-           <div class="row">
-              <div class="col-md-12">
-                Login via
-                <div class="social-buttons">
-                  <a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
-                  <a href="#" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
-                </div>
-                                or
-                 <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
-                    <div class="form-group">
-                       <label class="sr-only" for="exampleInputEmail2">Email address</label>
-                       <input name="email" type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" id='login-dropdown-toggle'><b>Login</b> <span class="caret"></span></a>
+          <ul id="login-dp" class="dropdown-menu">
+            <li>
+               <div class="row">
+                  <div class="col-md-12">
+                    Login via
+                    <div class="social-buttons">
+                      <a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
+                      <a href="#" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
                     </div>
-                    <div class="form-group">
-                       <label class="sr-only" for="exampleInputPassword2">Password</label>
-                       <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
-                                             <div class="help-block text-right"><a href="">Forget the password ?</a></div>
-                    </div>
-                    <div class="form-group">
-                       <button type="button" class="btn btn-primary btn-block" id='sign-in-catch'>Sign in</button>
-                    </div>
-                    <div class="checkbox">
-                       <label>
-                       <input type="checkbox"> keep me logged-in
-                       </label>
-                    </div>
-                 </form>
-              </div>
-              <div class="bottom text-center">
-                New here ? <a href="#"><b>Join Us</b></a>
-              </div>
-           </div>
+                                    or
+                     <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
+                        <div class="form-group">
+                           <label class="sr-only" for="exampleInputEmail2">Email address</label>
+                           <input name="email" type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
+                        </div>
+                        <div class="form-group">
+                           <label class="sr-only" for="exampleInputPassword2">Password</label>
+                           <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
+                                                 <div class="help-block text-right"><a href="">Forget the password ?</a></div>
+                        </div>
+                        <div class="form-group">
+                           <button type="button" class="btn btn-primary btn-block" id='sign-in-catch'>Sign in</button>
+                        </div>
+                        <div class="checkbox">
+                           <label>
+                           <input type="checkbox"> keep me logged-in
+                           </label>
+                        </div>
+                     </form>
+                  </div>
+                  <div class="bottom text-center">
+                    or, <a href="#" id='create-account-catch'><b>Create Account</b></a>
+                  </div>
+               </div>
+            </li>
+          </ul>
+
+        <!-- SIGNUP DROPDOWN -->
+        <li class="dropdown open" id='signup-dropdown' aria-expanded="true">
+          <a href="#" class="signup-dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><b>sign up!!</b> <span class="caret"></span></a>
+          <ul id="login-dp" class="dropdown-menu">
+            <li>
+               <div class="row">
+                  <div class="col-md-12">
+
+                     <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
+                        <div class="form-group">
+                            Email
+                           <label class="sr-only" for="exampleInputEmail2">Email address</label>
+                           <input name="email" type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
+                        </div>
+                        <div class="form-group">
+                            Password
+                           <label class="sr-only" for="exampleInputPassword2">Password</label>
+                           <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
+                        </div>
+                        <div class="form-group" id='confirm-password'>
+                            Confirm Password
+                           <label class="sr-only" for="exampleInputPassword2">Password</label>
+                           <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
+                        </div>
+                        <div class="form-group">
+                        </div>
+                        <div class="checkbox">
+                           <!-- <label>
+                           <input type="checkbox"> keep me logged-in
+                           </label> -->
+                        </div>
+                     </form>
+                  </div>
+                  <div class="bottom text-center">
+
+                           <button type="button" class="btn btn-primary btn-block" id='submit-account-catch'>Create Account</button>
+
+                  </div>
+               </div>
+            </li>
+          </ul>
         </li>
-      </ul>
+
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
@@ -107,9 +151,6 @@
 </nav>
 
 
-
-
-<!-- Button trigger modal -->
 
 
 <div id="myModal" class="modal fade">
@@ -131,6 +172,39 @@
     <!-- /.modal-dialog -->
 </div>
 <!-- /.modal -->
+
+
+<!-- Dream-entry modal -->
+<div id="dream-entry-modal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Dream-cacher</h4>
+            </div>
+            <div class="modal-body" id="dream-entry-modal">
+              <textarea class="form-control" type="dream" id="dream-field" placeholder="Dream" rows="7" required>
+              </textarea>
+            </div>
+
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal" id='save-dream'>Save</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
+
+
+
+
+
+
+
 
 
 
