--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
                     Login via
                     <div class="social-buttons">
                       <a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
+                      <a href="#" class="btn btn-gl"><i class="fa fa-google"></i> Google</a>
                       <a href="#" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
+                      <a href="#" class="btn btn-gh"><i class="fa fa-github"></i> Github</a>
                     </div>
                                     or
                      <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
