--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <li class="active" id='dreamscape-tab'><a href="#">Dreamscape</a></li>
         <li id='my-dreams-tab'><a href="#">My Dreams</a></li>
         <li id='new-dream-tab'><a href="#">Cache New Dream</a></li>
+        <li id='info'><a href="#">Info</a></li>
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
