--- a/index.html
+++ b/index.html
@@ -233,6 +233,10 @@
 
       <script src="./js/vendor/bootstrap/bootstrap.min.js"></script>
 
+      <script src="./js/vendor/moment/moment.min.js"></script>
+
+      <script src="./js/interface/moment.js"></script>
+
       <script src="./js/mvc/controller.js"></script>
 
       <script src="./js/mvc/model.js"></script>
