updated parseDreamString() to allow for capitalized and upcase words

--- a/index.html
+++ b/index.html
@@ -156,17 +156,17 @@
 
 
 
-<div id="myModal" class="modal fade">
+<div id="dreamReadModal" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header" id='read-modal-header'>
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Modal title</h4>
+                <h4 class="modal-title" id="read-modal-title">Modal title</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" id='read-modal-body'>
 
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer" id='read-modal-footer'>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
@@ -186,8 +186,7 @@
                 <h4 class="modal-title">Dream-cacher</h4>
             </div>
             <div class="modal-body" id="dream-entry-modal">
-              <textarea class="form-control" type="dream" id="dream-field" placeholder="Dream" rows="7" required>
-              </textarea>
+              <textarea class="form-control" type="dream" id="dream-field" placeholder="Dream" rows="7" required></textarea>
             </div>
 
 
