getting ready to deploy

--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
             <li>
                <div class="row">
                   <div class="col-md-12">
-                    Login via
+                    <!-- Login via
                     <div class="social-buttons">
                       <a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
                       <a href="#" class="btn btn-gl"><i class="fa fa-google"></i> Google</a>
                       <a href="#" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
                       <a href="#" class="btn btn-gh"><i class="fa fa-github"></i> Github</a>
                     </div>
-                                    or
+                                    or -->
                      <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
                         <div class="form-group">
                            <label class="sr-only" for="exampleInputEmail2">Email address</label>
@@ -85,16 +85,16 @@
                         <div class="form-group">
                            <label class="sr-only" for="exampleInputPassword2">Password</label>
                            <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
-                                                 <div class="help-block text-right"><a href="">Forget the password ?</a></div>
+                                                 <!-- <div class="help-block text-right"><a href="">Forget the password ?</a></div> -->
                         </div>
                         <div class="form-group">
                            <button type="button" class="btn btn-primary btn-block" id='sign-in-catch'>Sign in</button>
                         </div>
-                        <div class="checkbox">
+                        <!-- <div class="checkbox">
                            <label>
                            <input type="checkbox"> keep me logged-in
                            </label>
-                        </div>
+                        </div> -->
                      </form>
                   </div>
                   <div class="bottom text-center">
@@ -217,9 +217,6 @@
 
 
 
-
-
-
       <!-- dependencies - these should come BEFORE jToker -->
       <script src='./js/vendor/jquery/jquery-2.1.4.min.js'></script>
       <script src='./js/vendor/jquery/jquery.cookie.js'></script>
@@ -230,8 +227,6 @@
       <!-- this should come AFTER the preceeding files -->
       <script src='/js/vendor/devise_token_auth/j-toker.js'></script>
       <!-- jToker will now be available at $.auth -->
-
-
 
       <script src="./js/vendor/bootstrap/bootstrap.min.js"></script>
 
@@ -253,15 +248,9 @@
 
       <script src="./js/threex/threex.windowresize.js"></script>
 
-      <script src='./js/threex/threex.domevents.js'></script>
-
       <script src="./js/threex/threex.noiseshadermaterial.js"></script>
 
-      <script src="./js/threex/threex.daynight.js"></script>
-
       <script src="./js/interface/geometryChooser.js"></script>
-
-      <script src="./js/threex/starfields.js"></script>
 
       <script src="./js/interface/auth.js"></script>
 
