--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         <li id='my-dreams-tab'><a href="#">My Dreams</a></li>
         <li id='new-dream-tab'><a href="#">Cache New Dream</a></li>
         <li id='info'><a href="#">Info</a></li>
+
+
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -62,6 +64,9 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form> -->
       <ul class="nav navbar-nav navbar-right">
+        <li id='controls'>
+          <b>WASD</b> move, <b>R|F</b> up | down, <b>Q|E</b> roll, <b>mouse</b> pitch | yaw
+        </li>
         <li id='log-out-tab'><a href="#">Logout</a></li>
         <li class="dropdown" id='login-dropdown'>
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" id='login-dropdown-toggle'><b>Login</b> <span class="caret"></span></a>
