fixed jtoker filepath

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       <script src='./js/vendor/devise_token_auth/pubsub.js'></script>
 
       <!-- this should come AFTER the preceeding files -->
-      <script src='/js/vendor/devise_token_auth/j-toker.js'></script>
+      <script src='./js/vendor/devise_token_auth/j-toker.js'></script>
       <!-- jToker will now be available at $.auth -->
 
       <script src="./js/vendor/bootstrap/bootstrap.min.js"></script>
