put pubsub back for now

--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
       <script src='./js/vendor/jquery/jquery-2.1.4.min.js'></script>
       <script src='./js/vendor/jquery/jquery.cookie.js'></script>
       <script src='./js/vendor/jquery/jquery-deparam.js'></script>
+      <script src='./js/vendor/devise_token_auth/pubsub.js'></script>
 
       <!-- this should come AFTER the preceeding files -->
       <script src='./js/vendor/devise_token_auth/j-toker.js'></script>
