--- a/index.html
+++ b/index.html
@@ -220,41 +220,27 @@
 
       <div id="container"></div>
 
-      <!-- dependencies - these should come BEFORE jToker -->
       <script src='./js/vendor/jquery/jquery-2.1.4.min.js'></script>
       <script src='./js/vendor/jquery/jquery.cookie.js'></script>
       <script src='./js/vendor/jquery/jquery-deparam.js'></script>
       <script src='./js/vendor/devise_token_auth/pubsub.js'></script>
-
-      <!-- this should come AFTER the preceeding files -->
       <script src='./js/vendor/devise_token_auth/j-toker.js'></script>
-      <!-- jToker will now be available at $.auth -->
+
+      <script src="./js/vendor/three/three.min.js"></script>
+      <script src="./js/vendor/threex/FlyControls.js"></script>
+      <script src="./js/vendor/threex/threex.windowresize.js"></script>
+      <script src="./js/vendor/threex/threex.noiseshadermaterial.js"></script>
 
       <script src="./js/vendor/bootstrap/bootstrap.min.js"></script>
-
       <script src="./js/vendor/moment/moment.min.js"></script>
 
       <script src="./js/mvc/controller.js"></script>
-
       <script src="./js/mvc/model.js"></script>
-
       <script src="./js/mvc/view.js"></script>
 
       <script src="./js/interface/helpers.js"></script>
-
-      <script src="./js/vendor/three/three.min.js"></script>
-
-      <script src="./js/threex/FlyControls.js"></script>
-
-      <script src="./js/threex/threex.windowresize.js"></script>
-
-      <script src="./js/threex/threex.noiseshadermaterial.js"></script>
-
       <script src="./js/interface/geometryChooser.js"></script>
-
       <script src="./js/interface/auth.js"></script>
-
       <script src="./js/interface/environment.js"></script>
-
    </body>
 </html>
