move parseDreamString into js/services/parse-dream-string

--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
   <script src="./js/vendor/bootstrap/bootstrap.min.js"></script>
   <script src="./js/vendor/moment/moment.min.js"></script>
 
+  <script src="./js/services/parse-dream-string.js"></script>
+
   <script src="./js/mvc/controller.js"></script>
   <script src="./js/mvc/model.js"></script>
   <script src="./js/mvc/view.js"></script>
