move getRandom into service

--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
   <script src="./js/vendor/bootstrap/bootstrap.min.js"></script>
   <script src="./js/vendor/moment/moment.min.js"></script>
 
+  <script src="./js/services/get-random.js"></script>
   <script src="./js/services/get-random-coords.js"></script>
   <script src="./js/services/parse-dream-string.js"></script>
 
