--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
   <!-- load scripts -->
 
-  <script src='./js/vendor/jquery/jquery-2.1.4.min.js'></script>
+  <!-- <script src='./js/vendor/jquery/jquery-2.1.4.min.js'></script>
   <script src='./js/vendor/jquery/jquery.cookie.js'></script>
   <script src='./js/vendor/jquery/jquery-deparam.js'></script>
   <script src='./js/vendor/devise_token_auth/pubsub.js'></script>
@@ -183,7 +183,9 @@
 
   <script src="./js/mvc/view.js"></script>
   <script src="./js/mvc/model.js"></script>
-  <script src="./js/mvc/controller.js"></script>
+  <script src="./js/mvc/controller.js"></script> -->
+
+  <script src="./bundle.js"></script>
 </body>
 
 </html>
