--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   </div>
 
   <!-- Dream-entry modal -->
-  <div id="dream-entry-modal" class="modal fade">
+  <div id="dream-entry-modal-container" class="modal fade" tabIndex="-1" role="dialog">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -142,7 +142,7 @@
           <h4 class="modal-title">Dream-cacher</h4>
         </div>
 
-        <div class="modal-body" id="dream-entry-modal">
+        <div class="modal-body" id="dream-entry-modal-body">
           <textarea class="form-control" type="dream" id="dream-field" placeholder="Dream" rows="7" required></textarea>
         </div>
       </div>
