hack: make sure that bootstrap-jquery doesn't ignore click events on inputs and textareas inside of dialogs and dropdowns

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   </div>
 
   <!-- Dream-entry modal -->
-  <div id="dream-entry-modal-container" class="modal fade" tabIndex="-1" role="dialog">
+  <div id="dream-entry-modal-container" class="modal fade">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
