--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </div>
 
         <div class="modal-body" id="dream-entry-modal-body">
-          <textarea class="form-control" type="dream" id="dream-field" placeholder="Dream" rows="7" required></textarea>
+          <textarea class="form-control" id="dream-field" placeholder="Dream" rows="7" required></textarea>
         </div>
       </div>
 
