--- a/index.html
+++ b/index.html
@@ -82,29 +82,23 @@
               <li>
                 <div class="row">
                   <div class="col-md-12">
-                    <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
+                    <form class="form" role="form" accept-charset="UTF-8" id="sign-up-form">
                       <div class="form-group">
-                        Email
-                        <label class="sr-only" for="exampleInputEmail2">Email address</label>
-                        <input name="email" type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required />
+                        <input name="email" type="email" class="form-control" placeholder="Email address" required />
                       </div>
 
                       <div class="form-group">
-                        Password
-                        <label class="sr-only" for="exampleInputPassword2">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required />
+                        <input name="password" type="password" class="form-control" placeholder="Password" required />
                       </div>
 
-                      <div class="form-group" id='confirm-password'>
-                        Confirm Password
-                        <label class="sr-only" for="exampleInputPassword2">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
+                      <div class="form-group">
+                        <input name="password_confirmation" type="password" class="form-control" placeholder="Confirm password" required>
+                      </div>
+
+                      <div class="bottom text-center">
+                        <button type="submit" class="btn btn-primary btn-block" id='submit-account-catch'>Create Account</button>
                       </div>
                     </form>
-                  </div>
-
-                  <div class="bottom text-center">
-                    <button type="button" class="btn btn-primary btn-block" id='submit-account-catch'>Create Account</button>
                   </div>
                 </div>
               </li>
