forms hidden on log out

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <b>WASD</b> move, <b>R|F</b> up | down, <b>Q|E</b> roll, <b>mouse</b> pitch | yaw
           </li>
 
-          <li id='log-out-tab'>
+          <li id='log-out-btn'>
             <a href="#">Logout</a>
           </li>
 
