--- a/index.html
+++ b/index.html
@@ -48,19 +48,17 @@
               <li>
                 <div class="row">
                   <div class="col-md-12">
-                    <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
+                    <form class="form" accept-charset="UTF-8" id="login-form">
                       <div class="form-group">
-                        <label class="sr-only" for="exampleInputEmail2">Email address</label>
-                        <input name="email" type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required />
+                        <input name="email" type="email" class="form-control" placeholder="Email address" required />
                       </div>
 
                       <div class="form-group">
-                        <label class="sr-only" for="exampleInputPassword2">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required />
+                        <input name="password" type="password" class="form-control" placeholder="Password" required />
                       </div>
 
                       <div class="form-group">
-                        <button type="button" class="btn btn-primary btn-block" id='sign-in-catch'>Sign in</button>
+                        <button type="submit" class="btn btn-primary btn-block" id='sign-in-btn'>Sign in</button>
                       </div>
                     </form>
                   </div>
