--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                 <div class="row">
                   <div class="col-md-12">
                     <form class="form" accept-charset="UTF-8" id="login-form">
+
+                      <div id="login-form-error">Invalid login credentials.</div>
+
                       <div class="form-group">
                         <input name="email" type="email" class="form-control" placeholder="Email address" required />
                       </div>
