login / signup form error management/display done

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <div class="col-md-12">
                     <form class="form" accept-charset="UTF-8" id="login-form">
 
-                      <div id="login-form-error">Invalid login credentials.</div>
+                      <div id="login-form-error" class="form-error">Invalid login credentials</div>
 
                       <div class="form-group">
                         <input name="email" type="email" class="form-control" placeholder="Email address" required />
@@ -79,14 +79,18 @@
                   <div class="col-md-12">
                     <form class="form" role="form" accept-charset="UTF-8" id="sign-up-form">
                       <div class="form-group">
+                        <div id="sign-up-form-email-exists-error" class="form-error">Email address already in use</div>
+                        <div id="sign-up-form-email-invalid-error" class="form-error">Email address is invalid</div>
                         <input name="email" type="email" class="form-control" placeholder="Email address" required />
                       </div>
 
                       <div class="form-group">
+                        <div class="form-error" id="sign-up-form-password-length-error">password must be more than 8 characters</div>
                         <input name="password" type="password" class="form-control" placeholder="Password" required />
                       </div>
 
                       <div class="form-group">
+                        <div class="form-error" id="sign-up-form-password-matching-error">passwords don't match</div>
                         <input name="password_confirmation" type="password" class="form-control" placeholder="Confirm password" required>
                       </div>
 
