set autofocus on 'cache new dream' modal's textarea

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
 
         <div class="modal-body" id="dream-entry-modal-body">
-          <textarea class="form-control" id="dream-field" placeholder="Dream" rows="7" required></textarea>
+          <textarea class="form-control" id="dream-field" placeholder="Dream" rows="7" required autofocus></textarea>
         </div>
       </div>
 
