disable save-dream-btn on successful form submit -- re-enable on modal open

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal" id='save-dream'>Save</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" id='save-dream-btn'>Save</button>
       </div>
     </div>
   </div>
