--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 
 <head>
   <title>dREAM-cACHER</title>
+
+  <meta property="og:image" content="http://enspiral-cherubi.github.io/dREAM-cACHER_interface_1.0/media/image-01.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:description" content="Interactive 3D dream diary"/>
+  <link rel="image_src" href="http://enspiral-cherubi.github.io/dREAM-cACHER_interface_1.0/media/image-01.png" />
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <link href="./stylesheets/vendor/bootstrap.min.css" rel="stylesheet" />
