--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <ul class="nav navbar-nav navbar-right">
           <li id='controls'>
-            <b>WASD</b> move, <b>R|F</b> up | down, <b>Q|E</b> roll, <b>mouse</b> pitch | yaw
+            <b>WASD</b> move, <b>ARROWS</b> or <b>CLICK</b> steering, <b>R|F</b> up | down, <b>Q|E</b> roll
           </li>
 
           <li id='log-out-btn'>
